# otop

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  commitlint.config.js
.github/workflows/: cd.yml  ci.yml
.hooks/: commit-msg
app/src/: App.tsx
docs/: project-proposal.md  protocol.md
scripts/: setup.sh
server/: committed.toml
server/.cargo-husky/hooks/: commit-msg
